[BI-275] fix text overflow on courses page

--- a/lms/static/sass/base/_override.scss
+++ b/lms/static/sass/base/_override.scss
@@ -396,6 +396,8 @@ body {
 .find-courses {
     .wrapper-search-context {
         .search-status-label {
+            word-break: break-word;
+
             @media (max-width: 767px) {
                 font-size: 1.8em;
                 line-height: 1.8em;
